react3.3, props i rabota s obiektami

--- a/src/app/style/components/button.css
+++ b/src/app/style/components/button.css
@@ -28,3 +28,9 @@
 .button-primary-bordered:hover{
     opacity: 0.8;
 }
+
+.button-secondary-bordered{
+    border: 1px solid #bcbebf;
+    background-color: #fafafa;
+    color: #303233;
+}
