--- a/src/app/style/components/header.css
+++ b/src/app/style/components/header.css
@@ -21,6 +21,7 @@
     color: #fff;
     margin: 0 10px;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .header-search{
@@ -51,7 +52,7 @@
     cursor: pointer;
 }
 
-.header-button--green{
+a.header-button--green{
     border: 1px solid rgba(163, 218, 165, .5);
     color: #a3daa5;
 
