--- a/src/app/style/components/input.css
+++ b/src/app/style/components/input.css
@@ -4,5 +4,9 @@
     padding: 0 20px;
     width: 100%;
     outline: none;
+    border: 1px solid #ddd;
+}
+
+.input:focus{
     border: 1px solid #1785E5;
 }
