--- a/src/app/style/components/input.css
+++ b/src/app/style/components/input.css
@@ -10,3 +10,17 @@
 .input:focus{
     border: 1px solid #1785E5;
 }
+
+.autocomplite{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.tag{
+    padding: 5px;
+    border-radius: 4px;
+    background-color: #eceff0;
+    display: inline-block;
+    margin-left: auto;
+}
