--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,4 +6,6 @@
 @import url('style/components/card.css');
 @import url('style/components/login.css');
 @import url('style/components/fieldset.css');
-@import url('style/components/dropdown.css')
+@import url('style/components/dropdown.css');
+@import url('style/components/selectdate.css');
+@import url('style/components/radio.css');
