--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,4 @@
 @import url('style/components/dropdown.css');
 @import url('style/components/selectdate.css');
 @import url('style/components/radio.css');
+@import url('style/components/modal.css');
