--- a/src/app/style/components/input.css
+++ b/src/app/style/components/input.css
@@ -24,3 +24,14 @@
     display: inline-block;
     margin-left: auto;
 }
+
+.textarea{
+    height: 200px;
+    border-radius: 4px;
+    padding: 0 20px;
+    width: 100%;
+    outline: none;
+    border: 1px solid #ddd;
+    resize: none;
+    padding-top: 10px;
+}
