--- a/src/app/style/components/selectdate.css
+++ b/src/app/style/components/selectdate.css
@@ -9,7 +9,7 @@
 }
 
 .selectdate select{
-    border-left: none;
+    /* border-left: none; */
     border-right: none;
     border-radius: 0;
     width: 45%;
@@ -19,4 +19,27 @@
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
     width: 30%;
+}
+
+
+.salary {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.salary input{
+    width: 40%;
+}
+
+.salary select{
+    width: 35%;
+}
+
+.selectdate-noday select{
+    border-left: 1px solid #ddd;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+
+
 }
