--- a/src/app/style/components/selectdate.css
+++ b/src/app/style/components/selectdate.css
@@ -9,7 +9,7 @@
 }
 
 .selectdate select{
-    /* border-left: none; */
+    border-left: none;
     border-right: none;
     border-radius: 0;
     width: 45%;
@@ -39,7 +39,5 @@
 .selectdate-noday select{
     border-left: 1px solid #ddd;
     border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-
-
+    border-bottom-left-radius: 4px; 
 }
