--- a/src/app/style/components/dropdown.css
+++ b/src/app/style/components/dropdown.css
@@ -19,3 +19,21 @@
 .dropdown a:hover{
     background-color: #e4e4e4;
 }
+
+.dropdown-tags{
+    padding: 10px;
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+}
+
+.dropdown-tags a{
+    display: inline-block;
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.dropdown-tags h4{
+    width: 100%;
+}
