--- a/src/app/style/components/selectdate.css
+++ b/src/app/style/components/selectdate.css
@@ -9,8 +9,8 @@
 }
 
 .selectdate select{
-    border-left: none;
-    border-right: none;
+    /* border-left: none;
+    border-right: none; */
     border-radius: 0;
     width: 45%;
 }
